--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
-[![Code Climate](https://codeclimate.com/github/spscream/thunderflow/badges/gpa.svg)](https://codeclimate.com/github/spscream/thunderflow)
-[![Test Coverage](https://codeclimate.com/github/spscream/thunderflow/badges/coverage.svg)](https://codeclimate.com/github/spscream/thunderflow)
+{<img src="https://codeclimate.com/github/spscream/thunderflow/badges/gpa.svg"/>}[https://codeclimate.com/github/spscream/thunderflow]
+{<img src="https://codeclimate.com/github/spscream/thunderflow/badges/coverage.svg"/>}[https://codeclimate.com/github/spscream/thunderflow]
 == README
 Simple clone of StackOverflow.
 Learning project that i'm developing on Thinknetica courses.
