--- a/config/locales/responders.en.yml
+++ b/config/locales/responders.en.yml
@@ -10,3 +10,7 @@ en:
       destroy:
         notice: '%{resource_name} was successfully destroyed.'
         alert: '%{resource_name} could not be destroyed.'
+    answers:
+      accept:
+        notice: 'Answer was accepted.'
+        alert: 'Question already has accepted answer.'
